--- a/style.css
+++ b/style.css
@@ -4,6 +4,11 @@
     box-sizing: border-box;
     font-family: 'Merriweather Sans', sans-serif;
 }
+body{
+    height: 100%;
+    width: 100%;
+    background-color: #3f72af;
+}
 #wrapper{
     width: 100vw;
     height: 100vh;
